<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.search.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:elevation="4dp"
        android:minHeight="?android:attr/actionBarSize"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/search_toolbar_menu"
        app:navigationIcon="@drawable/ic_button_top_bar_left"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_text_bg"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingVertical="10dp"
        android:paddingStart="24dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Spiderman" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        tools:listitem="@layout/movie_item_rv_search"
        tools:visibility="gone" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="imageViewNoResults,textViewNoResult,textViewSearchSuggestion"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_no_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch" />

    <TextView
        android:id="@+id/textViewNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:letterSpacing="0.12"
        android:text="@string/no_movie_found"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewNoResults" />

    <TextView
        android:id="@+id/textViewSearchSuggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:letterSpacing="0.12"
        android:text="@string/search_suggestion"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNoResult" />

</androidx.constraintlayout.widget.ConstraintLayout>